# LocalSuperSearch

./: .gitignore  Cargo.toml  Readme.md  is
src/: crawl.rs  file_index.rs  main.rs  search.rs  storage.rs
