[package]
name = "LocalSuperSearch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
home = "0.5.11"
keyword_extraction = "1.5.0"
lazy_static = "1.5.0"
lingua = "1.7.2"
pdf-extract = "0.9.0"
queues = "1.1.0"
rusqlite = "0.36.0"
stop-words = "0.8.1"
strum = "0.27.1"
strum_macros = "0.27.1"
